Update for 8u191 changes